--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "query-string": "^6.11.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "superagent": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
